<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="application_name">PocketMine</string>
    <string name="activity_name">PocketMine</string>
    <string name="server_handler">服务器管理</string>
    <string name="server_online">开启服务器</string>
    <string name="server_kill">关闭服务器</string>
    <string name="install_bin">安装PocketMine中...</string>
    <string name="bin_installed">PocketMine安装成功</string>
    <string name="bin_error">安装PocketMine失败</string>
    <!-- Action bar menus -->
    <string name="abs_settings">设置</string>
    <string name="abs_file_manager">文件管理</string>
    <string name="abs_about">关于</string>
    <!-- Server Service -->
    <string name="sevc_service">PocketMine服务</string>
    <string name="sevc_server_started">PocketMine运行中</string>
    <!--  -->
    <string name="title_activity_log">控制台</string>
    <string name="btn_console_send">输入</string>
    <string name="title_activity_file_manager">文件管理</string>
    <string name="abs_force_close">终止服务器</string>
    <string name="title_activity_version_manager">版本管理</string>
    <string name="abs_version_manager">版本管理</string>
    <string name="abs_properties_editor">属性编辑</string>
    <string name="thank_you">感谢您选择下载使用PocketMine！</string>
    <string name="before_anything">现在我们会为你准备一切。</string>
    <string name="preparing_string">准备中...</string>
    <string name="title_activity_install">欢迎！</string>
    <string name="versionToInstall">选择安装版本：</string>
    <string name="skip_version_sel">跳过这一步</string>
    <string name="install_dev">下载开发版本</string>
    <string name="server_info">服务器状态</string>
    <string name="stat_online">在线：Unknown</string>
    <string name="stat_ram">内存使用：Unknown</string>
    <string name="stat_download">下载：Unknown</string>
    <string name="stat_upload">上传：Unknown</string>
    <string name="stat_tps">TPS：Unknown</string>
    <string name="server_players">玩家</string>
    <string name="player_kick">踢</string>
    <string name="player_ban">Ban</string>
    <string name="player">玩家</string>
    <string name="title_activity_config">服务器属性编辑</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <string name="config_name">服务器名称：</string>
    <string name="config_port">服务器端口：</string>
    <string name="config_gamemode">游戏模式</string>
    <string name="gamemode_survival">生存</string>
    <string name="gamemode_creative">创造</string>
    <string name="gamemode_adventure">冒险</string>
    <string name="gamemode_spectator">观众</string>
    <string name="config_players">最大玩家数</string>
    <string name="config_spawnprotect">出生点保护</string>
    <string name="config_spawnprotect_range">范围</string>
    <string name="config_whitelist">白名单：</string>
    <string name="config_whitelist_edit">编辑</string>
    <string name="config_desc">服务器描述：</string>
    <string name="config_usage">发送匿名使用统计</string>
    <string name="config_query">启用Query（允许别人检查服务器状态）</string>
    <string name="config_rcon">启用RCON（运行您远程控制本服务器）</string>
	<string name="config_rcon_port">RCON端口（留空为服务器端口）</string>
    <string name="config_hardcore">死后即Ban</string>
    <string name="config_motd">本日消息：</string>
    <string name="config_advanced">高级</string>
    <string name="config_save">保存</string>
    <string name="config_cancel">返回</string>
    <string name="config_rcon_password">RCON密码：</string>
    <string name="config_ip">内部服务器IP：</string>
    <string name="config_ram">内存：</string>
    <string name="config_achievements">宣布玩家成就</string>
    <string name="config_distance">可视距离：</string>
    <string name="config_distance_warning">所选视图距离超过10，此设置可能会导致手机卡顿并需要大量数据上传。</string>
    <string name="config_pvp">启用PVP</string>
    <string name="config_difficulty">困难度:</string>
    <string name="difficulty_peaceful">和平</string>
    <string name="difficulty_easy">简单</string>
    <string name="difficulty_normal">正常</string>
    <string name="difficulty_hard">困难</string>
    <string name="config_level_name">世界文件夹：</string>
    <string name="config_level_seed">世界种子：</string>
    <string name="config_level_type">世界类型：</string>
    <string name="config_level_type_info">PocketMine地图类型: DEFAULT （普通世界），FLAT （平坦世界）</string>
    <string name="config_auto_save">自动保存</string>
    <string name="config_fly">允许使用飞行类插件</string>
    <string name="conf_generator_setting">总设置（超平坦世界）：</string>
    <string name="title_activity_whitelist">白名单</string>
    <string name="whitelist_add">添加</string>
    <string name="whitelist_remove">清除</string>
    <string name="server_actions">选项</string>
    <string name="action_op">Op</string>
    <string name="action_deop">Deop</string>
    <string name="stat_ip">IP地址：Unknown</string>
    <string name="title_activity_plugins">插件</string>
    <string name="plugin">插件</string>
    <string name="plugin_author">作者</string>
    <string name="plugins_error_nointernet">没有网络可用</string>
    <string name="plugins_error_general">发生了一个错误</string>
    <string name="plugins_error_retry">重试</string>
    <string name="plugins_error_cancel">返回</string>
    <string name="title_activity_search_results">搜索结果</string>
    <string name="title_activity_category">类别</string>
    <string name="title_activity_details">插件详细信息</string>
    <string name="plugins_featured">推荐</string>
    <string name="plugins_essential">重要</string>
    <string name="more">查看更多...</string>
    <string name="plugins_popular">最受欢迎</string>
    <string name="plugin_description">描述</string>
    <string name="plugin_reviews">评论</string>
    <string name="plugin_rating">评分：</string>
    <string name="review_author">作者</string>
    <string name="review_version">版本：Unknown</string>
    <string name="plugin_links">链接</string>
    <string name="title_activity_review">评论</string>
    <string name="review_author_response">作者的回复</string>
    <string name="link_sample">示例</string>
    <string name="link_sample_url">http://google.pl/</string>
    <string name="title_activity_developer">开发者界面</string>
    <string name="channel_stable">稳定版</string>
    <string name="download">下载</string>
    <string name="choose_channel">选择版本：</string>
    <string name="dummy_version">版本：Unknown (API版本：Unknown)</string>
    <string name="dummy_date">1/1/1970</string>
	<string name="channel_soft">软版</string>
    <string name="channel_beta">测试版</string>
    <string name="channel_dev">开发版</string>

</resources>
