<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<View
			android:layout_width="match_parent"
			android:layout_height="24dp"/>

		<android.support.v7.widget.Toolbar
			android:id="@+id/home_toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:layout_scrollFlags="scroll"
			app:subtitleTextColor="#FFFFFF"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

	</android.support.design.widget.AppBarLayout>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_below="@id/home_toolbar"
			android:layout_above="@+id/adView" >

			<LinearLayout
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical"
				android:padding="15dip" >

				<TextView
					style="@style/ListTitleText"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="2dip"
					android:text="@string/server_handler" />

				<LinearLayout
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="10dip"
					android:orientation="horizontal" >

					<Button
						android:id="@+id/RunTime_Http"
						style="@color/text"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="center"
						android:text="@string/server_online" />

					<Button
						android:id="@+id/RunTime_Http_Kill"
						style="@color/text"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:gravity="center"
						android:text="@string/server_kill" />
				</LinearLayout>

				<LinearLayout
					android:id="@+id/stats"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical"
					android:visibility="gone" >

					<TextView
						style="@style/ListTitleText"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:text="@string/server_info" />

					<TextView
						android:id="@+id/stat_ip"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:text="@string/stat_ip" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >

						<TextView
							android:id="@+id/stat_online"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/stat_online" />

						<TextView
							android:id="@+id/stat_ram"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/stat_ram" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >

						<TextView
							android:id="@+id/stat_download"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/stat_download" />

						<TextView
							android:id="@+id/stat_upload"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/stat_upload" />
					</LinearLayout>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="horizontal" >

						<TextView
							android:id="@+id/stat_tps"
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:layout_weight="1"
							android:text="@string/stat_tps" />

						<!--
						<TextView
						android:id="@+id/stat_"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_weight="1"
						android:text="@string/stat_" />
						-->
					</LinearLayout>

					<TextView
						style="@style/ListTitleText"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:paddingTop="6dip"
						android:text="@string/server_actions" />

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content" >

						<Button
							android:id="@+id/action_op"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/action_op" />

						<Button
							android:id="@+id/action_deop"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/action_deop" />
					</LinearLayout>

					<TextView
						style="@style/ListTitleText"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:paddingTop="6dip"
						android:text="@string/server_players" />

					<LinearLayout
						android:id="@+id/players"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical" >
					</LinearLayout>

				</LinearLayout>

			</LinearLayout>

		</ScrollView>

	</RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
